testdata/baselines/reference/submodule/conformance/unicodeExtendedEscapesInRegularExpressions12(target=es6).errors.txt
unicodeExtendedEscapesInRegularExpressions12.ts(1,13): error TS1198: An extended Unicode escape value must be between 0x0 and 0x10FFFF inclusive.
unicodeExtendedEscapesInRegularExpressions12.ts(1,21): error TS1508: Unexpected '}'. Did you mean to escape it with backslash?


==== unicodeExtendedEscapesInRegularExpressions12.ts (2 errors) ====
    var x = /\u{FFFFFFFF}/gu;
                ~~~~~~~~
!!! error TS1198: An extended Unicode escape value must be between 0x0 and 0x10FFFF inclusive.
                        ~
!!! error TS1508: Unexpected '}'. Did you mean to escape it with backslash?
    